Cleanup compiler warnings, format code.
git-svn-id: https://svn.apache.org/repos/asf/incubator/harmony/enhanced/classlib/trunk@454042 13f79535-47bb-0310-9956-ffa450edef68