@@ -14,10 +14,7 @@
  *  See the License for the specific language governing permissions and
  *  limitations under the License.
  */
-/**
- * @author Dmitry A. Durnev
- * @version $Revision$
- */
+
 package java.awt;
 
 import java.awt.event.FocusEvent;
@@ -30,15 +27,12 @@ import java.beans.VetoableChangeListener;
 import java.beans.VetoableChangeSupport;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.Vector;
 
-
 public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEventPostProcessor {
-
     public static final int FORWARD_TRAVERSAL_KEYS = 0;
 
     public static final int BACKWARD_TRAVERSAL_KEYS = 1;
@@ -47,23 +41,17 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
 
     public static final int DOWN_CYCLE_TRAVERSAL_KEYS = 3;
 
-    final static int[] compTraversalIDs = { FORWARD_TRAVERSAL_KEYS,
-                                           BACKWARD_TRAVERSAL_KEYS,
-                                           UP_CYCLE_TRAVERSAL_KEYS };
+    final static int[] compTraversalIDs = { FORWARD_TRAVERSAL_KEYS, BACKWARD_TRAVERSAL_KEYS,
+            UP_CYCLE_TRAVERSAL_KEYS };
 
-    final static int[] contTraversalIDs = { FORWARD_TRAVERSAL_KEYS,
-                                           BACKWARD_TRAVERSAL_KEYS,
-                                           UP_CYCLE_TRAVERSAL_KEYS,
-                                           DOWN_CYCLE_TRAVERSAL_KEYS };
+    final static int[] contTraversalIDs = { FORWARD_TRAVERSAL_KEYS, BACKWARD_TRAVERSAL_KEYS,
+            UP_CYCLE_TRAVERSAL_KEYS, DOWN_CYCLE_TRAVERSAL_KEYS };
 
-    private final Map<Integer, Set<AWTKeyStroke>> defaultFocusTraversalKeys =
-        new HashMap<Integer, Set<AWTKeyStroke>>();
+    private final Map<Integer, Set<? extends AWTKeyStroke>> defaultFocusTraversalKeys = new HashMap<Integer, Set<? extends AWTKeyStroke>>();
 
-    private FocusTraversalPolicy defaultFocusTraversalPolicy =
-        new DefaultFocusTraversalPolicy();
+    private FocusTraversalPolicy defaultFocusTraversalPolicy = new DefaultFocusTraversalPolicy();
 
     // focus state is static, i. e. 1 per class loader:
-
     static Component focusOwner;
 
     static Component actualFocusOwner;
@@ -92,13 +80,10 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
 
     private VetoableChangeSupport vetoableChangeSupport;
 
-
-//    private final Toolkit toolkit = Toolkit.getDefaultToolkit();
-
+    //    private final Toolkit toolkit = Toolkit.getDefaultToolkit();
     public KeyboardFocusManager() {
         for (int element : contTraversalIDs) {
-            defaultFocusTraversalKeys.put(new Integer(element),
-                    null);
+            defaultFocusTraversalKeys.put(new Integer(element), null);
         }
     }
 
@@ -110,10 +95,8 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
         keyEventPostProcessors.add(processor);
     }
 
-    public void addPropertyChangeListener(String propertyName,
-                                          PropertyChangeListener listener) {
-        getPropertyChangeSupport().addPropertyChangeListener(propertyName,
-                listener);
+    public void addPropertyChangeListener(String propertyName, PropertyChangeListener listener) {
+        getPropertyChangeSupport().addPropertyChangeListener(propertyName, listener);
     }
 
     public void addPropertyChangeListener(PropertyChangeListener listener) {
@@ -124,16 +107,13 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
         getVetoableChangeSupport().addVetoableChangeListener(listener);
     }
 
-    public void addVetoableChangeListener(String propertyName,
-                                          VetoableChangeListener listener) {
-        getVetoableChangeSupport().addVetoableChangeListener(propertyName,
-                listener);
+    public void addVetoableChangeListener(String propertyName, VetoableChangeListener listener) {
+        getVetoableChangeSupport().addVetoableChangeListener(propertyName, listener);
     }
 
     public void clearGlobalFocusOwner() {
         if (focusOwner != null) {
-            setFocus(focusOwner, focusOwner.getWindowAncestor(),
-                                    false, null, false, true);
+            setFocus(focusOwner, focusOwner.getWindowAncestor(), false, null, false, true);
         }
     }
 
@@ -156,17 +136,13 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
 
     protected abstract void enqueueKeyEvents(long a0, Component a1);
 
-    protected void firePropertyChange(String propertyName, Object oldValue,
-                                      Object newValue) {
-        getPropertyChangeSupport().firePropertyChange(propertyName, oldValue,
-                                                      newValue);
+    protected void firePropertyChange(String propertyName, Object oldValue, Object newValue) {
+        getPropertyChangeSupport().firePropertyChange(propertyName, oldValue, newValue);
     }
 
-    protected void fireVetoableChange(String propertyName, Object oldValue,
-                                      Object newValue)
+    protected void fireVetoableChange(String propertyName, Object oldValue, Object newValue)
             throws PropertyVetoException {
-        getVetoableChangeSupport().fireVetoableChange(propertyName, oldValue,
-                                                      newValue);
+        getVetoableChangeSupport().fireVetoableChange(propertyName, oldValue, newValue);
     }
 
     public final void focusNextComponent() {
@@ -202,10 +178,11 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
         }
     }
 
+    @SuppressWarnings("unchecked")
     public Set<AWTKeyStroke> getDefaultFocusTraversalKeys(int id) {
         Integer kId = Integer.valueOf(id);
         checkTraversalKeysID(defaultFocusTraversalKeys, kId);
-        return defaultFocusTraversalKeys.get(kId);
+        return (Set<AWTKeyStroke>) defaultFocusTraversalKeys.get(kId);
     }
 
     public FocusTraversalPolicy getDefaultFocusTraversalPolicy() {
@@ -249,9 +226,8 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
      */
     private void checkInstance() throws SecurityException {
         if (getCurrentKeyboardFocusManager() != this) {
-            throw new SecurityException(
-                    "this KeyboardFocusManager is not installed "
-                            + "in the current thread's context");
+            throw new SecurityException("this KeyboardFocusManager is not installed "
+                    + "in the current thread's context");
         }
     }
 
@@ -262,13 +238,10 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
         return focusedWindow;
     }
 
-    protected Component getGlobalPermanentFocusOwner()
-        throws SecurityException {
-
+    protected Component getGlobalPermanentFocusOwner() throws SecurityException {
         checkInstance();
         // TODO: get global permanent focus owner somehow
         // (not from the current class loader)
-
         return permanentFocusOwner;
     }
 
@@ -312,7 +285,7 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
     }
 
     public void removeKeyEventDispatcher(KeyEventDispatcher dispatcher) {
-       keyEventDispatchers.remove(dispatcher);
+        keyEventDispatchers.remove(dispatcher);
     }
 
     public void removeKeyEventPostProcessor(KeyEventPostProcessor processor) {
@@ -320,9 +293,8 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
     }
 
     public void removePropertyChangeListener(String propertyName,
-                                             PropertyChangeListener listener) {
-        getPropertyChangeSupport().removePropertyChangeListener(propertyName,
-                                                                listener);
+            PropertyChangeListener listener) {
+        getPropertyChangeSupport().removePropertyChangeListener(propertyName, listener);
     }
 
     public void removePropertyChangeListener(PropertyChangeListener listener) {
@@ -334,9 +306,8 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
     }
 
     public void removeVetoableChangeListener(String propertyName,
-                                             VetoableChangeListener listener) {
-        getVetoableChangeSupport().removeVetoableChangeListener(propertyName,
-                                                                listener);
+            VetoableChangeListener listener) {
+        getVetoableChangeSupport().removeVetoableChangeListener(propertyName, listener);
     }
 
     public static void setCurrentKeyboardFocusManager(KeyboardFocusManager newManager)
@@ -351,9 +322,8 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
                 secMan.checkPermission(new AWTPermission(permission));
             }
             oldManager = toolkit.currentKeyboardFocusManager;
-            toolkit.currentKeyboardFocusManager =
-                ((newManager != null) ? newManager :
-                 new DefaultKeyboardFocusManager());
+            toolkit.currentKeyboardFocusManager = ((newManager != null) ? newManager
+                    : new DefaultKeyboardFocusManager());
         } finally {
             toolkit.unlockAWT();
         }
@@ -369,38 +339,37 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
 
     public void setDefaultFocusTraversalKeys(int id, Set<? extends AWTKeyStroke> keystrokes) {
         Integer kId = Integer.valueOf(id);
-        Set<AWTKeyStroke> oldKeyStrokes = defaultFocusTraversalKeys.get(kId);
+        Set<? extends AWTKeyStroke> oldKeyStrokes = defaultFocusTraversalKeys.get(kId);
         checkTraversalKeysID(defaultFocusTraversalKeys, kId);
-        checkKeyStrokes(contTraversalIDs, defaultFocusTraversalKeys, kId,
-                        (Set<AWTKeyStroke>) keystrokes);
-        defaultFocusTraversalKeys.put(kId, (Set<AWTKeyStroke>) keystrokes);
+        checkKeyStrokes(contTraversalIDs, defaultFocusTraversalKeys, kId, keystrokes);
+        defaultFocusTraversalKeys.put(kId, keystrokes);
         String propName = null;
         switch (id) {
-        case FORWARD_TRAVERSAL_KEYS:
-            propName = "forwardDefaultFocusTraversalKeys";
-            break;
-        case BACKWARD_TRAVERSAL_KEYS:
-            propName = "backwardDefaultFocusTraversalKeys";
-            break;
-        case UP_CYCLE_TRAVERSAL_KEYS:
-            propName = "upCycleDefaultFocusTraversalKeys";
-            break;
-        case DOWN_CYCLE_TRAVERSAL_KEYS:
-            propName = "downCycleDefaultFocusTraversalKeys";
-            break;
+            case FORWARD_TRAVERSAL_KEYS:
+                propName = "forwardDefaultFocusTraversalKeys";
+                break;
+            case BACKWARD_TRAVERSAL_KEYS:
+                propName = "backwardDefaultFocusTraversalKeys";
+                break;
+            case UP_CYCLE_TRAVERSAL_KEYS:
+                propName = "upCycleDefaultFocusTraversalKeys";
+                break;
+            case DOWN_CYCLE_TRAVERSAL_KEYS:
+                propName = "downCycleDefaultFocusTraversalKeys";
+                break;
         }
         firePropertyChange(propName, oldKeyStrokes, keystrokes);
     }
 
     public void setDefaultFocusTraversalPolicy(FocusTraversalPolicy defaultPolicy) {
         if (defaultPolicy == null) {
-            throw new IllegalArgumentException("default focus traversal policy" +
-                    " cannot be null");
+            throw new IllegalArgumentException("default focus traversal policy"
+                    + " cannot be null");
         }
         FocusTraversalPolicy oldPolicy = defaultFocusTraversalPolicy;
         defaultFocusTraversalPolicy = defaultPolicy;
         firePropertyChange("defaultFocusTraversalPolicy", oldPolicy,
-                           defaultFocusTraversalPolicy);
+                defaultFocusTraversalPolicy);
     }
 
     protected void setGlobalActiveWindow(Window activeWindow) {
@@ -408,8 +377,7 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
         // fire Vetoable change[before it is reflected in Java focus state],
         // catch veto exception
         try {
-            fireVetoableChange(propName, KeyboardFocusManager.activeWindow,
-                               activeWindow);
+            fireVetoableChange(propName, KeyboardFocusManager.activeWindow, activeWindow);
         } catch (PropertyVetoException e) {
             // abort the change, i. e.
             // don't reflect the change in KFM, don't report to property change
@@ -418,26 +386,21 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
         }
         Window oldActiveWindow = KeyboardFocusManager.activeWindow;
         KeyboardFocusManager.activeWindow = activeWindow;
-        firePropertyChange(propName, oldActiveWindow,
-                           KeyboardFocusManager.activeWindow);
+        firePropertyChange(propName, oldActiveWindow, KeyboardFocusManager.activeWindow);
     }
 
     public void setGlobalCurrentFocusCycleRoot(Container newFocusCycleRoot) {
         Container oldFocusCycleRoot = currentFocusCycleRoot;
         currentFocusCycleRoot = newFocusCycleRoot;
-        firePropertyChange("currentFocusCycleRoot", oldFocusCycleRoot,
-                           currentFocusCycleRoot);
+        firePropertyChange("currentFocusCycleRoot", oldFocusCycleRoot, currentFocusCycleRoot);
     }
 
     protected void setGlobalFocusOwner(Component focusOwner) {
         String propName = "focusOwner";
-
         // fire Vetoable change[before it is reflected in Java focus state],
         // catch veto exception
-
         try {
-            fireVetoableChange(propName, KeyboardFocusManager.focusOwner,
-                               focusOwner);
+            fireVetoableChange(propName, KeyboardFocusManager.focusOwner, focusOwner);
         } catch (PropertyVetoException e) {
             // abort the change, i. e.
             // don't reflect the change in KFM, don't report to property change
@@ -451,70 +414,55 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
                 //don't clear current focus cycle root every time a component
                 //is losing focus
                 //TODO: do it[clear] somewhere else(maybe Window.dispose()??)
-                Container root =
-                     ( (focusOwner instanceof Window) ? (Window)focusOwner :
-                        focusOwner.getFocusCycleRootAncestor() );
-
+                Container root = ((focusOwner instanceof Window) ? (Window) focusOwner
+                        : focusOwner.getFocusCycleRootAncestor());
                 if (root == null || root.isFocusCycleRoot()) {
                     setGlobalCurrentFocusCycleRoot(root);
                 }
             }
         }
-
-        firePropertyChange(propName, oldFocusOwner,
-                           KeyboardFocusManager.focusOwner);
+        firePropertyChange(propName, oldFocusOwner, KeyboardFocusManager.focusOwner);
     }
 
     protected void setGlobalFocusedWindow(Window focusedWindow) {
         String propName = "focusedWindow";
-
         // fire Vetoable change[before it is reflected in Java focus state],
         // catch veto exception
-
         try {
-            fireVetoableChange(propName, KeyboardFocusManager.focusedWindow,
-                               focusedWindow);
+            fireVetoableChange(propName, KeyboardFocusManager.focusedWindow, focusedWindow);
         } catch (PropertyVetoException e) {
             // abort the change, i. e.
             // don't reflect the change in KFM, don't report to property change
             // listeners
             return;
         }
-
         Window oldFocusedWindow = KeyboardFocusManager.focusedWindow;
         if (focusedWindow == null || focusedWindow.isFocusableWindow()) {
             KeyboardFocusManager.focusedWindow = focusedWindow;
         }
-
-        firePropertyChange(propName, oldFocusedWindow,
-                           KeyboardFocusManager.focusedWindow);
-
+        firePropertyChange(propName, oldFocusedWindow, KeyboardFocusManager.focusedWindow);
     }
 
     protected void setGlobalPermanentFocusOwner(Component permanentFocusOwner) {
         String propName = "permanentFocusOwner";
-
         // fire Vetoable change[before it is reflected in Java focus state],
         // catch veto exception
-
         try {
             fireVetoableChange(propName, KeyboardFocusManager.permanentFocusOwner,
-                               permanentFocusOwner);
+                    permanentFocusOwner);
         } catch (PropertyVetoException e) {
             // abort the change, i. e.
             // don't reflect the change in KFM,
             // don't report to property change listeners
             return;
         }
-        Component oldPermanentFocusOwner =
-            KeyboardFocusManager.permanentFocusOwner;
-        if ((permanentFocusOwner == null) ||
-             permanentFocusOwner.isFocusable()) {
+        Component oldPermanentFocusOwner = KeyboardFocusManager.permanentFocusOwner;
+        if ((permanentFocusOwner == null) || permanentFocusOwner.isFocusable()) {
             KeyboardFocusManager.permanentFocusOwner = permanentFocusOwner;
             setGlobalFocusOwner(permanentFocusOwner);
         }
         firePropertyChange(propName, oldPermanentFocusOwner,
-                           KeyboardFocusManager.permanentFocusOwner);
+                KeyboardFocusManager.permanentFocusOwner);
     }
 
     public final void upFocusCycle() {
@@ -525,57 +473,42 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
 
     static void checkTraversalKeysID(Map<?, ?> keysMap, Integer id) {
         if (!keysMap.containsKey(id)) {
-            throw new IllegalArgumentException(
-                    "invalid focus traversal key identifier");
+            throw new IllegalArgumentException("invalid focus traversal key identifier");
         }
     }
 
-    static void checkKeyStrokes(int[] traversalIDs, Map<Integer, Set<AWTKeyStroke>> traversalKeys,
-                                Integer kId, Set<AWTKeyStroke> keystrokes) {
-        if (keystrokes == null) {
+    static void checkKeyStrokes(int[] traversalIDs,
+            Map<Integer, Set<? extends AWTKeyStroke>> traversalKeys, Integer kId,
+            Set<? extends AWTKeyStroke> keystrokes) {
+        if (keystrokes == null || keystrokes.isEmpty()) {
             return;
         }
-
-        Iterator<AWTKeyStroke> i = keystrokes.iterator();
-        while (i.hasNext()) {
-            Object o = i.next();
-            AWTKeyStroke key = o instanceof AWTKeyStroke ? (AWTKeyStroke) o
-                                                        : null;
+        for (AWTKeyStroke key : keystrokes) {
             if (key == null) {
-                throw new IllegalArgumentException(
-                        o == null ? "cannot set null focus traversal key"
-                                 : "cannot set focus traversal key " +
-                                        "to non-AWTKeyStroke");
+                throw new IllegalArgumentException("cannot set null focus traversal key");
             } // actually throw ClassCastException ??
             if (key.getKeyEventType() == KeyEvent.KEY_TYPED) {
                 throw new IllegalArgumentException(
                         "focus traversal keys cannot map to KEY_TYPED events");
             }
-
             // throw exception if such a KeyStroke is already present for
             // another id
-
             for (int element : traversalIDs) {
-                Integer theID = new Integer(element);
-                Object val = traversalKeys.get(theID);
+                Integer theID = Integer.valueOf(element);
+                Set<? extends AWTKeyStroke> val = traversalKeys.get(theID);
                 if ((!theID.equals(kId)) &&
-                    (val instanceof Set) &&
-                    ((Set)val).contains(key)) {
-
-                    throw new IllegalArgumentException(
-                            "focus traversal keys must be unique" +
-                            " for a Component");
+                        val != null && 
+                        val.contains(key)) {
+                    throw new IllegalArgumentException("focus traversal keys must be unique"
+                            + " for a Component");
                 }
             }
         }
-
     }
 
-    boolean requestFocus(Component c, boolean temporary,
-                         boolean crossWindow, boolean callCB) {
+    boolean requestFocus(Component c, boolean temporary, boolean crossWindow, boolean callCB) {
         Window wnd = ((c != null) ? c.getWindowAncestor() : null);
         return requestFocus(c, wnd, temporary, crossWindow, callCB);
-
     }
 
     /**
@@ -584,12 +517,10 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
      * Component's request focus callCB is set to true, when called directly
      * from native event dispatching code - to false.
      */
-    boolean requestFocus(Component c, Window wnd, boolean temporary,
-                         boolean crossWindow, boolean callCB) {
-
+    boolean requestFocus(Component c, Window wnd, boolean temporary, boolean crossWindow,
+            boolean callCB) {
         Window focusedWnd = actualFocusedWindow;
         Window activeWnd = actualActiveWindow;
-
         // don't take focus from other applications:
         // change active window from null only if native
         // event is received(i. e. callCB is false)
@@ -601,29 +532,23 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
             }
             return false;
         }
-
         if (callCB && !checkWindow(wnd)) {
             return false;
         }
-
         setFocus(actualFocusOwner, wnd, false, c, temporary, callCB);
-
         // in case of cross-window focus transfer
         // remember that this component had requested focus in that window
-
         if (crossWindow && (focusedWnd != wnd)) {
             wnd.setRequestedFocus(c);
             wnd.behaviour.setFocus(true, focusedWnd); // try to change
             // focusedWindow(?)
         }
-
         //        if (!wnd.isFocused()) {
         //            return false; //async focus - wait until window actually gains
         //            // focus
         //        }
         wnd.setRequestedFocus(c);
         setFocus(c, wnd, true, actualPrevFocusOwner, temporary, callCB);
-
         if (wnd != null) {
             wnd.setFocusOwner(c);
             wnd.setRequestedFocus(null);
@@ -641,12 +566,10 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
         if (wnd == null) {
             return false;
         }
-
         if (wnd instanceof EmbeddedWindow) {
             // TODO: query state of EmbeddedWindow's owner
             return true;
         }
-
         // FIXME: explicitly deny focus requests for components
         // inside iconified/shaded windows:
         if ((getOwningFrame(wnd).getExtendedState() & Frame.ICONIFIED) != 0) {
@@ -657,11 +580,10 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
 
     Frame getOwningFrame(Window w) {
         Window wnd;
-        for (wnd = w; (wnd != null) && !(wnd instanceof Frame);
-             wnd = wnd.getOwner()) {
+        for (wnd = w; (wnd != null) && !(wnd instanceof Frame); wnd = wnd.getOwner()) {
             ;
         }
-        return (Frame)wnd;
+        return (Frame) wnd;
     }
 
     /**
@@ -672,48 +594,35 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
      * proper order
      */
     void setFocus(Component c, Window wnd, boolean focus, Component opposite,
-                  boolean temporary, boolean callCB) {
+            boolean temporary, boolean callCB) {
         Window focusedWnd = actualFocusedWindow;
-
-
-        Window oppositeAncestorWnd =
-            ( (opposite != null) ? opposite.getWindowAncestor() :
-              (focus ? focusedWnd : null) );
+        Window oppositeAncestorWnd = ((opposite != null) ? opposite.getWindowAncestor()
+                : (focus ? focusedWnd : null));
         Window ancestorWnd = (!focus ? focusedWnd : wnd);
-
         if (!focus && (ancestorWnd == null)) {
             ancestorWnd = actualActiveWindow;
         }
-
         if (focus) {
             postWindowEvent(ancestorWnd, oppositeAncestorWnd, focus);
         }
-
         if (c != null) {
             // when losing focus to some component in other window
             // post temporary event:
             if (!focus && (opposite != null) && !callCB) {
-                temporary =
-                    (c.getWindowAncestor() != opposite.getWindowAncestor());
+                temporary = (c.getWindowAncestor() != opposite.getWindowAncestor());
             }
-            FocusEvent newEvent = new FocusEvent(c,
-                    focus ? FocusEvent.FOCUS_GAINED : FocusEvent.FOCUS_LOST,
-                    temporary, opposite);
-
+            FocusEvent newEvent = new FocusEvent(c, focus ? FocusEvent.FOCUS_GAINED
+                    : FocusEvent.FOCUS_LOST, temporary, opposite);
             // remember previous focus owner to be able to post it as opposite
             // later
             // [when opposite component gains focus]
             // but clear it if application loses focus
             if (!focus) {
-                actualPrevFocusOwner =
-                    ( (opposite != null) ? actualFocusOwner : null );
+                actualPrevFocusOwner = ((opposite != null) ? actualFocusOwner : null);
             }
-            actualFocusOwner = ( focus ? c :
-                ((c == actualFocusOwner) ? null : actualFocusOwner) );
-
+            actualFocusOwner = (focus ? c : ((c == actualFocusOwner) ? null : actualFocusOwner));
             c.postEvent(newEvent);
         }
-
         // post window events when losing focus only if
         // there's opposite component or
         // events come from native layer[if opposite is null],
@@ -725,7 +634,6 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
         if (focus && callCB) {
             c.behaviour.setFocus(focus, opposite);
         }
-
     }
 
     /**
@@ -733,11 +641,9 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
      * as if it is the focused Window
      */
     boolean requestFocusInWindow(Window wnd, boolean callCB) {
-
         if (wnd == null) {
             return false;
         }
-        
         Component lastReqFocus = wnd.getRequestedFocus();
         if ((lastReqFocus != null) && (lastReqFocus.getWindowAncestor() != wnd)) {
             lastReqFocus = null;
@@ -747,18 +653,13 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
         if ((lastFocusOwner != null) && lastFocusOwner.getWindowAncestor() != wnd) {
             lastFocusOwner = null;
         }
-        Component compToFocus = ((lastReqFocus != null) ? lastReqFocus :
-                                                          lastFocusOwner);
-                
-
+        Component compToFocus = ((lastReqFocus != null) ? lastReqFocus : lastFocusOwner);
         if (compToFocus != null) {
             return requestFocus(compToFocus, wnd, false, false, callCB);
         }
-
         // even if there's no component to focus
         // we can try to focus window itself
         return requestFocus(wnd, wnd, false, false, callCB);
-
     }
 
     /**
@@ -773,47 +674,29 @@ public abstract class KeyboardFocusManager implements KeyEventDispatcher, KeyEve
      */
     boolean postWindowEvent(Window wnd, Window opposite, boolean focus) {
         Window focusedWnd = actualFocusedWindow;
-
         Window decorWnd = ((wnd != null) ? wnd.getFrameDialogOwner() : null);
-        int focusEventId =
-            (focus ? WindowEvent.WINDOW_GAINED_FOCUS :
-             WindowEvent.WINDOW_LOST_FOCUS);
-        int activationEventId =
-            (focus ? WindowEvent.WINDOW_ACTIVATED :
-             WindowEvent.WINDOW_DEACTIVATED);
-
+        int focusEventId = (focus ? WindowEvent.WINDOW_GAINED_FOCUS
+                : WindowEvent.WINDOW_LOST_FOCUS);
+        int activationEventId = (focus ? WindowEvent.WINDOW_ACTIVATED
+                : WindowEvent.WINDOW_DEACTIVATED);
         if ((opposite == null) && (prevFocusedWindow != null)) {
             opposite = prevFocusedWindow;
         }
-        Window oppositeDecorWnd = ((opposite != null) ?
-                                   opposite.getFrameDialogOwner() :
-                                   null);
-
-        boolean focusedWindowChanged =
-            ( (wnd != null) &&
-              (focus ? focusedWnd != wnd :
-               opposite != wnd) );
-        boolean activeWindowChanged =
-            ( (decorWnd != null) &&
-              (focus ? actualActiveWindow != decorWnd :
-               oppositeDecorWnd != decorWnd) );
-        WindowEvent activationEvent =
-            ( activeWindowChanged ?
-              new WindowEvent(decorWnd,
-                              activationEventId,
-                              oppositeDecorWnd) :
-              null );
-
+        Window oppositeDecorWnd = ((opposite != null) ? opposite.getFrameDialogOwner() : null);
+        boolean focusedWindowChanged = ((wnd != null) && (focus ? focusedWnd != wnd
+                : opposite != wnd));
+        boolean activeWindowChanged = ((decorWnd != null) && (focus ? actualActiveWindow != decorWnd
+                : oppositeDecorWnd != decorWnd));
+        WindowEvent activationEvent = (activeWindowChanged ? new WindowEvent(decorWnd,
+                activationEventId, oppositeDecorWnd) : null);
         if (activeWindowChanged && focus) {
             decorWnd.postEvent(activationEvent);
             actualActiveWindow = decorWnd;
         }
-
         if (focusedWindowChanged) {
             wnd.postEvent(new WindowEvent(wnd, focusEventId, opposite));
             actualFocusedWindow = (focus ? wnd : null);
         }
-
         if (activeWindowChanged && !focus) {
             decorWnd.postEvent(activationEvent);
             actualActiveWindow = null;
